--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -2,12 +2,38 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        <title>{% block title %}Carnet d'entretien{% endblock %}</title>
+        {% block stylesheets %}
+            <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap.min.css') }}">
+        {% endblock %}
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
     </head>
     <body>
-        {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        <div class="container">
+            <header class="jumbotron">
+                <h1>Mon carnet d'entretien</h1>
+                <p>Vous trouverez ici toutes les vidanges qui ont été faites sur vos véhicules</p>
+            </header>
+            <div class="row">
+                <div id="menu" class="col-md-3">
+                    <h3>Les Véhicules</h3>
+                    <ul class="nav nav-pills nav-stacked">
+                        <li><a href="{{ path('carnet_car_home') }}">Accueil</a></li>
+                        <li><a href="{{ path('carnet_car_add') }}">Ajouter un véhicule</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-9">
+                    {% block body %}
+                        
+                    {% endblock %}
+                </div>
+            </div>
+        </div>
+
+            
+        {% block javascripts %}
+            <script src="{{ asset('js/jquery-3.1.1.min.js') }}"></script>
+            <script src="{{ asset('js/bootstrap.min.js') }}"></script>
+        {% endblock %}
     </body>
 </html>
