Update CarController to see vidanges in Car view

--- a/src/Carnet/CarBundle/Resources/views/Car/view.html.twig
+++ b/src/Carnet/CarBundle/Resources/views/Car/view.html.twig
@@ -14,12 +14,16 @@
 		</div>
 	{% endif %}
 
+	{% for vidange in vidanges %}
+		{{ vidange.date|date('d/m/Y') }}<br />
+	{% endfor %}
+
 	<p>
 		<a href="{{ path('carnet_car_home') }}" class="btn btn-default">
 			<i class="glyphicon glyphicon-chevron-left"></i>
 			Retour à la liste
 		</a>
-		<a href="{{ path('carnet_car_update', {'id': car.id}) }}" class="btn btn-default">
+		<a href="{{ path('carnet_car_update', {'id': car.id}) }}" class="btn btn-warning">
 			<i class="glyphicon glyphicon-edit"></i>
 			Modifier le véhicule
 		</a>
