Add nbKm field to Vidange's Entity

--- a/src/Carnet/CarBundle/Resources/views/Car/view.html.twig
+++ b/src/Carnet/CarBundle/Resources/views/Car/view.html.twig
@@ -15,7 +15,7 @@
 	{% endif %}
 
 	{% for vidange in vidanges %}
-		{{ vidange.date|date('d/m/Y') }}<br />
+		Fait le {{ vidange.date|date('d/m/Y') }} à {{ vidange.nbKm }}km<br />
 	{% endfor %}
 
 	<p>
