--- a/src/Carnet/CarBundle/Resources/views/Vidange/add.html.twig
+++ b/src/Carnet/CarBundle/Resources/views/Vidange/add.html.twig
@@ -25,8 +25,8 @@
 	<script>
 		$(document).ready(function() {
 			$('.js-datepicker').datepicker({
-				dateFormat: 'dd/mm/yy',
-				format: 'yyyy-mm-dd'
+				format: 'yyyy-mm-dd',
+				firstDay: 1
 			});
 		});
 	</script>
