Update design of delete car button

--- a/src/Carnet/CarBundle/Resources/views/Car/view.html.twig
+++ b/src/Carnet/CarBundle/Resources/views/Car/view.html.twig
@@ -41,7 +41,7 @@
 			Ajouter une vidange
 		</a>
 		<a href="{{ path('carnet_car_delete', {'id': car.id}) }}" class="btn btn-danger">
-			<i class="glyphicon glyphicon-trash"></i>
+			<i class="glyphicon glyphicon-remove"></i>
 			Supprimer le véhicule
 		</a>
 	</p>
