Update add's vidange view

--- a/src/Carnet/CarBundle/Resources/views/Vidange/add.html.twig
+++ b/src/Carnet/CarBundle/Resources/views/Vidange/add.html.twig
@@ -26,7 +26,8 @@
 		$(document).ready(function() {
 			$('.js-datepicker').datepicker({
 				format: 'yyyy-mm-dd',
-				firstDay: 1
+				firstDay: 1,
+				showAnim: 'blind'
 			});
 		});
 	</script>
